# generative-ai-course

05_microservices_all_in_one_platform/09_create_project/rp-poetry/: pyproject.toml
05_microservices_all_in_one_platform/09_create_project/uit-api-class/uitclass/: main.py
